# kinnector-config

./: Cargo.toml  README.md  compile.sh  rules.db
include/: kinnector_config.h
src/: lib.rs  rules.fbs  rules_generated.rs
