[package]
name = "kinnector-config"
version = "0.1.0"
edition = "2021"

[lib]
name = "kinnector_config"
crate-type = ["rlib", "cdylib"]

[dependencies]
flatbuffers = "2.0.0"
ed25519-dalek = { version = "2.1", features = ["std"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
